fixing the API definition layout issue

--- a/AzureFunctions.AngularClient/src/app/site/swagger-definition/swagger-definition.component.scss
+++ b/AzureFunctions.AngularClient/src/app/site/swagger-definition/swagger-definition.component.scss
@@ -5,9 +5,9 @@ pre {
 }
 
 .medium {
-    width: 240px;
+    max-width: 240px;
     padding: 5px;
-    min-width: 200px;
+    min-width: 140px;
 }
 
 ul {
@@ -74,7 +74,6 @@ ul {
 }
 
 .wrapper {
-    min-width: 1030px;
     display: flex;
     flex-direction: column;
 }
@@ -158,7 +157,7 @@ ul {
 }
 
 .topbar {    
-    min-width: 742px;
+    min-width: 700px;
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
